2001-02-04 John R. Jackson <jrj@purdue.edu>

	* man/amanda.8.in: Fix mailto to space separated, not comma.

2001-02-03 John R. Jackson <jrj@purdue.edu>

	* .cvsignore: Add entries to keep CVS quiet.
	* */.cvsignore: Ditto.

2001-02-03 John R. Jackson <jrj@purdue.edu>

	* client-src/Makefile.am: Add CLEANFILES rule to remove *.test.c.
	* common-src/Makefile.am: Add more sources as needed to the test
	  programs so they would compile.
	* server-src/Makefile.am: Create TEST_PROGS make variable ala the
	  other Makefile.am files.
	* tape-src/Makefile.am: Add CLEANFILES rule to remove *.test.c.

2001-02-03 John R. Jackson <jrj@purdue.edu>

	* server-src/diskfile.c: Fix test program compilation error and bug
	  when just a config name was given on the command line.

2001-02-02 John R. Jackson <jrj@purdue.edu>

	* server-src/reporter.c: Fix problem with enum being unsigned on
	  some systems.

2001-01-29 John R. Jackson <jrj@purdue.edu>

	* tape-src/tapeio.c (tape_fsf): Go back to using snprintf as this
	  is now "the way".

2001-01-29 John R. Jackson <jrj@purdue.edu>

	* tape-src/output-tape.c (tape_tapefd_status): Convert flag values
	  to booleans (compliments of Marc W. Mengel <mengel@fnal.gov>).
	* tape-src/tapeio.c (tape_fsf): Use ap_snprintf instead of snprintf
	  (also compliments of Marc).

2001-01-26 John R. Jackson <jrj@purdue.edu>

	* changer-src/Makefile.am: Double up the references to libamanda to
	  handle systems that put regex in strange places.
	* client-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2001-01-23 John R. Jackson <jrj@purdue.edu>

	* configure.in: Add tapeio switch from Marc Mengel <mengel@fnal.gov>,
	  enhance and add "null" and "file" output drivers.  Change all
	  tape changers (except chg-scsi) to use amdd and ammt.  Change all
	  tape changers (except chg-scsi) to log and use a consistent