@@ -1121,6 +1121,7 @@ int Tape_Ready(int fd, int wait_time);
 void Inventory(char *labelfile, int drive, int eject, int start, int stop, int clean);
 void ChangerDriverVersion();
 int LogSense(int fd);
+int ScanBus();
 
 /*
  * Local variables:
