@@ -1,3 +1,12 @@
+2001-02-08 Thomas Hepper <th@ant.han.de>
+
+	* changer-src/scsi-aix.c: Added dummy ScanBus function
+	* changer-src/scsi-bsd.c: Added dummy ScanBus function
+	* changer-src/scsi-cam.c: Added dummy ScanBus function
+	* changer-src/scsi-hpux_new.c: Added dummy ScanBus function
+	* changer-src/scsi-irix.c: Added dummy ScanBus function
+	* changer-src/scsi-defs.h: Added prototype for ScanBus function
+
 2001-02-04 John R. Jackson <jrj@purdue.edu>
 
 	* man/amanda.8.in: Fix mailto to space separated, not comma.
